# BookCPP_PL

./: .gitignore  README.md
CCppBookCode/: CMakeLists.txt
CCppBookCode/include/: FxFor.h  PointFor.h  RevertEndianness.h  main_declarations.h  range.h
CCppBookCode/src/: CRC.cpp  Calendar_struct.cpp  ClassRelations.cpp  Dec2Roman.cpp  EventSystems.cpp  FileSystem.cpp  FixedPtArithm.cpp  FloatingPoint.cpp  Functions.cpp  Functions_Lambdas.cpp  InnerProduct.cpp  Miscellany.cpp  NewtonZero.cpp  OperatorReview.cpp  Pointers.cpp  References.cpp  STLExamples.cpp  SmartPointers.cpp  StatementReview.cpp  Time.cpp  TinyCube.cpp  Variables.cpp  VectorsStringsArrays.cpp  VirtualMechanisms.cpp  letter_histogram.cpp  main.cpp  range_test.cpp  tuple_vs_struct.cpp
CPro/: CMakeLists.txt
CPro/src/: main.c  struct_test.c  union_test.c
CompInterest/: CMakeLists.txt
CompInterest/src/: main.cpp
Complex/: CMakeLists.txt
Complex/include/: Complex.h
Complex/src/: Complex.cpp  ComplexTest.cpp  main.cpp
ComplexQuadEq/: CMakeLists.txt
ComplexQuadEq/include/: ComplexQuadEq.h
ComplexQuadEq/src/: ComplexQuadEq.cpp  ComplexQuadEqTest.cpp  main.cpp
CurrencyCalc/: CMakeLists.txt  ReadMe.txt
CurrencyCalc/CurrencyCalc_Lib/: CMakeLists.txt
CurrencyCalc/CurrencyCalc_Lib/include/: Currency.h  CurrencyCalcPlayGround.h  CurrencyExchanger.h  HTTP_File.h  XML_CurrencyExchanger.h
CurrencyCalc/CurrencyCalc_Lib/src/: Currency.cpp  CurrencyCalcPlayGround.cpp  CurrencyExchanger.cpp  HTTP_File.cpp  XML_CurrencyExchanger.cpp
CurrencyCalc/CurrencyCalc_Terminal/: CMakeLists.txt
CurrencyCalc/CurrencyCalc_Terminal/src/: main.cpp
CurrencyCalc/CurrencyCalc_WindowGUI/: CMakeLists.txt  ReadMe.txt
CurrencyCalc/CurrencyCalc_WindowGUI/include/: CloseWindow.h  CurCalc_GUI.h
CurrencyCalc/CurrencyCalc_WindowGUI/src/: CloseWindow.cpp  CurCalc_GUI.cpp  main.cpp
EasyMatrix/: CMakeLists.txt
EasyMatrix/include/: EMUtility.h  EMatrix.h  MarsXorShift.h
EasyMatrix/src/: EMTest.cpp  EMUtility.cpp  EMatrix.cpp  main.cpp
EmptyPro/: CMakeLists.txt  ReadMe.txt
EmptyPro/include/: empty.h
EmptyPro/src/: empty.cpp  main.cpp
FLTK/: FLTK_ReadMe.txt
Grades/: CMakeLists.txt
Grades/src/: main.cpp
LongNumber/: CMakeLists.txt
LongNumber/include/: Derived_PESEL.h  Embedded_PESEL.h  LongNumberFor.h
LongNumber/src/: Derived_PESEL_Test.cpp  Embedded_PESEL_Test.cpp  LongNumber_Test.cpp  main.cpp
ParallelCores/: CMakeLists.txt
ParallelCores/include/: EMUtility.h  EMatrix.h  MarsXorShift.h  range.h
ParallelCores/src/: EMTest_ParAlg.cpp  EMUtility_ParAlg.cpp  EMatrix.cpp  InnerProduct_ParAlg.cpp  OpenMPExamples.cpp  main.cpp
Parser/: CMakeLists.txt
Parser/include/: ExpressionTreeBuilderInterpreter.h  Nodes.h  SimpleExpressionInterpreter.h  TheStack.h  Visitors.h  range.h
Parser/src/: ExpressionParser_Test.cpp  NodeStackConverters.cpp  Nodes.cpp  Visitors.cpp  main.cpp
QuadEq/: CMakeLists.txt
QuadEq/include/: QuadEq.h
QuadEq/src/: QuadEq.cpp  main.cpp
RomanAppSuite/RomanApp/: CMakeLists.txt
RomanAppSuite/RomanApp/include/: Dec2Roman.h
RomanAppSuite/RomanApp/src/: Dec2Roman.cpp  main.cpp
RomanAppSuite/RomanApp_GTest/: CMakeLists.txt
RomanAppSuite/RomanApp_GTest/src/: test.cpp
TheCube/: CMakeLists.txt
TheCube/include/: TheCube.h
TheCube/src/: TheCube.cpp  TheCubeTest.cpp  main.cpp
TheStack/: CMakeLists.txt
TheStack/include/: TheStack.h  range.h
TheStack/src/: TheStackTest.cpp
